--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -110,3 +110,55 @@ body {
     box-shadow: 9px 9px 16px rgb(163 177 198 / 60%),
                 -9px -9px 16px rgb(255 255 255 / 50%);
 }
+
+.posts-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 282px;
+    height: 45px;
+    border-radius: 8px;
+    box-shadow: 9px 9px 16px rgb(163 177 198 / 60%),
+                -9px -9px 16px rgb(255 255 255 / 50%);
+    margin-top: 16px;
+}
+
+.text-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+}
+
+.text-box span + span {
+    color: var(--dark-gray);
+}
+
+.highlights-container {
+    list-style-type: none;
+    display: flex;
+    padding: 0;
+}
+
+.highlights-container div {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    box-shadow: 9px 9px 16px rgb(163 177 198 / 60%),
+                -9px -9px 16px rgb(255 255 255 / 50%);
+    margin: 8px;
+}
+
+.photos-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 4px;
+    width: 282px;
+}
+
+.photos-container img {
+    border-radius: 8px;
+    width: 90px;
+    height: 90px;
+    object-fit: cover;
+}
